# rpc

./: CMakeLists.txt
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: userservice.cc
src/: rpcapplication.cc  rpcprovider.cc
src/include/: rpcapplication.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
